Make improvements to AppController with dedicated methods, and better use properties
This project has a long way to go. A lot of the data that exists in this project should be using using properties and bindings. Settings now use properties so as to allow for bindings in context menus, as does some of the bin display code. If I can make everything done with bindings, I would be a happy developer!